# academic-sentiment-api

./: .dockerignore  .gitignore  Dockerfile  README.md  prueba_gemini.py  pyproject.toml
.github/workflows/: ci.yml
app/: analyzer.py  config.py  main.py  models.py
scripts/: generate_dummy_data.py
tests/: test_api.py
